# KVAT

./: CMakeCache.txt  CMakeLists.txt
poly/: CMakeLists.txt  Makefile  cmake_install.cmake  fips202.h  params.h  poly.cpp  poly.h  polymat.cpp  polymat.h  polyvec.cpp  sample.cpp  sample.h
protocol/: CMakeLists.txt  Makefile  app.cpp  cmake_install.cmake  construct.cpp  construct.h  cpaenc.cpp  cpaenc.h  main_protocol  main_protocol.cpp  main_protocol.h  multi_protocol  multi_protocol.cpp  pack.cpp  pack.h  params.h  protocol1.cpp  protocol1.h  protocol2.cpp  protocol2.h  protocol_batch.cpp  protocol_batch.h  speed_test  speed_test.cpp  speed_test_batch  speed_test_batch.cpp  tools.cpp  tools.h
